<resources>
    <string name="app_name">Phoenix Stock Management</string>
    <string name="splash_icon">Splash Icon</string>
    <string name="project_name">Phoenix Stock Management</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">LogIn</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="error_invalid_email">l adresse email address est invalid</string>
    <string name="error_invalid_password">Mot de passe tres court</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_field_required">Ce champ est obliguatoire</string>
    <string name="permission_rationale">"Les autorisations de contacts sont nécessaires pour fournir des compléments d'email."</string>

    //ajouter_client
    <string name="ajouter_client_titre">Ajouter un Client</string>
    <string name="ajouter_client_nom">Nom</string>
    <string name="ajouter_client_email">Email</string>
    <string name="ajouter_client_mobile">Mobile</string>
    <string name="ajouter_client_telephone">Tel</string>
    <string name="ajouter_client_adresse">Adresse</string>
    <string name="ajouter_client_titre_client">Titre:</string>
    <string name="ajouter">Ajouter</string>
    <string name="branch_nom">Branch Nom</string>
    <string name="ajouter_branch">Ajouter Branch</string>
    <string name="ajouter_supplier">Ajouter Supplier</string>
    <string name="ajouter_brand">Ajouter Brand</string>
    <string name="ajouter_product">Ajouter Product</string>
    <string name="supplier_brand">Supplier Brand</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ajouter_branch_titre">Ajouter un branch</string>
    <string name="nom_du_branche">Nom:</string>
    <string name="tel_du_branche">Telephone:</string>
    <string name="addresse_du_branche">Addresse:</string>
    <string name="voulez_recevoir_des_nouvelles_par_sms">Voulez recevoir des nouvelles par SMS</string>
    <string name="nom_du_brand">Nom: </string>
    <string name="nom_du_client">Nom Du Client</string>
    <string name="titre">Titre</string>
    <string name="telephone">Telephone</string>
    <string name="adresse_client">Adresse Client</string>
    <string name="mobile_client">Mobile Client</string>
    <string name="titre_client">Titre Client</string>
    <string name="email_client">Email Client</string>
    <string name="telephone_client">Telephone Client</string>
    <string name="nom_supplier">Nom: </string>
    <string name="email_supplier">Email:</string>
    <string name="mobile_supplier">Mobile:</string>
    <string name="nom_produit">Nom Produit</string>
    <string name="famille_produit">Famille Produit</string>
    <string name="type_produit">Type Produit</string>
    <string name="saison_produit">Saison Produit</string>
    <string name="prix_de_revient">Prix De Revient</string>
    <string name="prix_de_vente">Prix De Vente</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="branches">Branches</string>
    <string name="availability">Availabilities</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_gsb_vc_2017">About Phoenix</string>
    <string name="clients">Clients</string>
    <string name="register">Register</string>
    <string name="ajouter_user">Ajouter User</string>
    <string name="brands">Brands</string>
    <string name="products">Products</string>
    <string name="suppliers">Suppliers</string>
    <string name="action_logout">Log Out</string>
    <string name="ajoute_supplier_title">Ajouter un Supplier</string>
    <string name="ajoute_brand_title">Ajouter un Brand</string>
    <string name="ajoute_product_title">Ajouter un Produit</string>
    <string name="product">Product</string>
    <string name="transaction_code">Transaction Code</string>
    <string name="ajouter_transaction">Ajouter Transaction</string>
    <string name="branch">Branch</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_type">Invoice Type</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="tab_transactions">Transactions</string>
    <string name="tab_transfers">Transfers</string>
    <string name="tab_invoices">Invoices</string>
    <string name="activities">Activities</string>
    <string name="brand">Brand:</string>
    <string name="product_titre">Product:</string>
    <string name="quantity">Quantity:</string>
    <string name="no_branches_found">No Branches Found</string>
    <string name="no_brands_found">No Brands Found</string>
    <string name="no_clients_found">No Clients Found</string>
    <string name="no_products_found">No Products Found</string>
    <string name="no_suppliers_found">No Suppliers Found</string>
    <string name="no_availabilities_found">No Data to Show</string>
    <string name="server_error_message">The Server Has Stumbled! \n We All Have Bad Days</string>
    <string name="no_connection_message">No Internet Connection</string>
    <string name="le_cnam_en_reseaux_sociaux">Le CNAM en Reseaux Sociaux</string>
    <string name="adresse_supplier">Adresse:</string>
    <string name="button_undo">undo</string>
    <string name="deleting">Deleting...</string>
    <string name="supplier_telephone">Supplier Telephone</string>
    <string name="loading">Loading..</string>
    <string name="ajouter_client">Ajouter Client</string>
    <string name="type_de_produit">Type De Produit</string>
    <string name="from_branch">From Branch</string>
    <string name="transfer_code">Transfer Code</string>
    <string name="to_branch">TO Branch</string>
</resources>
