<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_branches"
            android:icon="@drawable/ic_branch"
            android:title="@string/branches" />
        <item
            android:id="@+id/nav_client"
            android:icon="@drawable/ic_client"
            android:title="@string/clients" />
    </group>

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about_gsb_vc_2017" />
        </menu>
    </item>

</menu>
