<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/cardView_supplier"
    android:layout_width="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    app:cardCornerRadius="5dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            tools:background="@color/colorPrimary"
            android:id="@+id/linearLayout_iconBackground">

            <ImageView
                android:id="@+id/imageView_icon"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:src="@drawable/ic_supplier_brand"
                android:tint="@color/white" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/linearLayout_iconBackground"
            android:layout_toEndOf="@+id/linearLayout_iconBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_nomSup_titre"
                android:text="@string/nom_supplier"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_nomSup"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_toRightOf="@+id/textView_nomSup_titre"
                android:layout_toEndOf="@+id/textView_nomSup_titre"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_emailSup_titre"
                android:text="@string/email_supplier"
                android:layout_below="@+id/textView_nomSup_titre"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_emailSup"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_below="@id/textView_nomSup"
                android:layout_toRightOf="@+id/textView_emailSup_titre"
                android:layout_toEndOf="@+id/textView_emailSup_titre"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_telSup_titre"
                android:text="@string/supplier_telephone"
                android:layout_below="@+id/textView_emailSup_titre"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_telSup"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_below="@+id/textView_emailSup"
                android:layout_toRightOf="@+id/textView_telSup_titre"
                android:layout_toEndOf="@+id/textView_telSup_titre"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_mobileSup_titre"
                android:text="@string/mobile_supplier"
                android:layout_below="@+id/textView_telSup_titre"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_mobileSup"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_below="@+id/textView_telSup"
                android:layout_toRightOf="@+id/textView_mobileSup_titre"
                android:layout_toEndOf="@+id/textView_mobileSup_titre"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_adrSup_titre"
                android:text="@string/adresse_supplier"
                android:layout_below="@+id/textView_mobileSup_titre"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_adrSup"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_below="@id/textView_mobileSup"
                android:layout_toRightOf="@+id/textView_adrSup_titre"
                android:layout_toEndOf="@+id/textView_adrSup_titre"/>
        </RelativeLayout>
        <Button
            android:id="@+id/undo_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_alignParentEnd="true"
            android:text="@string/button_undo"
            android:textAllCaps="true"
            android:visibility="gone"
            android:textColor="@android:color/white"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</android.support.v7.widget.CardView>