<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    app:cardCornerRadius="5dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            tools:background="@color/colorPrimary"
            android:id="@+id/linearLayout_iconBackground">

            <ImageView
                android:id="@+id/imageView_icon"
                android:layout_width="48dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:src="@drawable/ic_branch"
                android:tint="@color/white" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/linearLayout_iconBackground"
            android:layout_toEndOf="@+id/linearLayout_iconBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_nomPro_titre"
                android:text="@string/nom_produit"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_nomPro"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_toRightOf="@+id/textView_nomPro_titre"
                android:layout_toEndOf="@+id/textView_nomPro_titre"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_type_prd_titre"
                android:text="@string/type_produit"
                android:layout_below="@+id/textView_nomPro"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_type_prd"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_toRightOf="@+id/textView_type_prd_titre"
                android:layout_toEndOf="@+id/textView_type_prd_titre"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_fam_prd_titre"
                android:text="@string/famille_produit"
                android:layout_below="@+id/textView_type_prd_titre"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_telSup"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_below="@+id/textView_type_prd"
                android:layout_toRightOf="@+id/textView_fam_prd_titre"
                android:layout_toEndOf="@+id/textView_fam_prd_titre"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_Sais_prd_titre"
                android:text="@string/saison_produit"
                android:layout_below="@+id/textView_fam_prd_titre"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_Sais_prd"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_below="@+id/textView_type_prd"
                android:layout_toRightOf="@+id/textView_Sais_prd_titre"
                android:layout_toEndOf="@+id/textView_Sais_prd_titre"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_prix_revient_titre"
                android:text="@string/prix_de_revient"
                android:layout_below="@+id/textView_Sais_prd_titre"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_prix_revient"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_below="@id/textView_mobileSup"
                android:layout_toRightOf="@+id/textView_prix_revient_titre"
                android:layout_toEndOf="@+id/textView_prix_revient_titre"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_prix_vente_titre"
                android:text="@string/prix_de_vente"
                android:layout_below="@+id/textView_prix_revient_titre"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_prix_vente"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_below="@id/textView_prix_revient"
                android:layout_toRightOf="@+id/textView_prix_vente_titre"
                android:layout_toEndOf="@+id/textView_prix_vente_titre"/>

        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>