<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    app:cardCornerRadius="5dp"
    android:id="@+id/cardView_branch"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            tools:background="@color/colorPrimary"
            android:id="@+id/linearLayout_iconBackground">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_branch"
                android:tint="@color/white"
                android:layout_gravity="center"
                android:id="@+id/imageView_icon"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/linearLayout_iconBackground"
            android:layout_toEndOf="@+id/linearLayout_iconBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_nomBranch_titre"
                android:text="@string/nom_du_branche"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_nomBranch"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_toRightOf="@+id/textView_nomBranch_titre"
                android:layout_toEndOf="@id/textView_nomBranch_titre"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_telBranch_titre"
                android:layout_below="@id/textView_nomBranch_titre"
                android:text="@string/tel_du_branche"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_telBranch"
                android:layout_below="@id/textView_nomBranch"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_toRightOf="@+id/textView_telBranch_titre"
                android:layout_toEndOf="@id/textView_telBranch_titre"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_addrBranch_titre"
                android:text="@string/addresse_du_branche"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_below="@id/textView_telBranch_titre" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_addrBranch"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_below="@id/textView_telBranch"
                android:layout_toRightOf="@+id/textView_addrBranch_titre"
                android:layout_toEndOf="@id/textView_addrBranch_titre"/>
        </RelativeLayout>
        <Button
            android:id="@+id/undo_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_alignParentEnd="true"
            android:text="@string/button_undo"
            android:textAllCaps="true"
            android:visibility="gone"
            android:textColor="@android:color/white"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</android.support.v7.widget.CardView>